Fixed hover on iphone images covering navbar, hover scaling now stays below navbar

--- a/src/PageLayout/Navbar.css
+++ b/src/PageLayout/Navbar.css
@@ -29,6 +29,7 @@ nav{
     background-size: cover;
     height: 6rem;
     justify-content: space-evenly;
+    z-index: 901;
 
 }
 
