--- a/src/Projects/Tablestyles.css
+++ b/src/Projects/Tablestyles.css
@@ -34,6 +34,7 @@
 
 .landing:hover{
 transform: scale(1.05);
+z-index: 4;
     }
 .contact{
     min-width: 380px; 
